Mejoras del diseño en móviles del login, sign in y restore password

--- a/Finnancer/src/app/app.html
+++ b/Finnancer/src/app/app.html
@@ -1,4 +1,3 @@
-<main class="flex items-end justify-center h-screen">
-  <app-auth-page></app-auth-page>
+<main>
+    <router-outlet></router-outlet>
 </main>
-<router-outlet></router-outlet>
