--- a/Finnancer/src/app/auth-page/auth-page.html
+++ b/Finnancer/src/app/auth-page/auth-page.html
@@ -1,7 +1,12 @@
-<div class="flex flex-col gap-2 w-full">
-    <h2 class="text-white font-medium text-3xl">Bienvenido a Finnacner</h2>
-    <p class="text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
-    <div class="flex flex-col self-bottom items-center justify-center p-5 gap-4 rounded-t-4xl w-full h-3/4 bg-white">
+<div class="flex flex-col w-screen h-screen">
+    <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
+        <button class="border-1 border-gray-100 rounded-full w-10 h-auto p-2"><i class='bx  bx-arrow-left-stroke' ></i></button>
+        <div class="flex-col p-4">
+            <h2 class="text-white font-medium text-3xl">Bienvenido a Finnacner</h2>
+            <p class="text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
+        </div>
+    </div>
+    <div class="min-h-2/3 flex flex-col p-5 gap-4 rounded-t-4xl w-full bg-white">
         <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-4 w-full text-gray-400">
             <button [class.btn-clicked]="buttonSelected === 'login'" (click)="changeModal('login')" class="flex items-center justify-center py-4 px-5 w-full">Iniciar Sesión</button>
             <button [class.btn-clicked]="buttonSelected === 'register'" (click)="changeModal('register')" class="flex items-center justify-center py-4 px-5 w-full">Registrarse</button>
