--- a/Finnancer/src/app/register/register.html
+++ b/Finnancer/src/app/register/register.html
@@ -1,15 +1,15 @@
-<div class="flex flex-col items-center justify-center p-1 gap-5 w-full min-h-100">
-    <div class="flex flex-col gap-1 items-start w-full">
+<div class="flex flex-col items-center justify-center gap-5 w-full min-h-100 slide-in-down">
+    <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
         <label for="">Nombre Completo</label>
-        <input type="text" placeholder="Ingrese su nombre" class="w-90 p-3 border-1 rounded-lg text-gray-500">
+        <input type="text" placeholder="Ingrese su nombre" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
     </div>
-    <div class="flex flex-col gap-1 items-start w-full">
+    <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
         <label for="">Correo Electrónico</label>
-        <input type="text" placeholder="Ingrese su correo" class="w-90 p-3 border-1 rounded-lg text-gray-500">
+        <input type="text" placeholder="Ingrese su correo" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
     </div>
-    <div class="flex flex-col gap-1 items-start w-full">
+    <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
         <label for="">Contraseña</label>
-        <input type="password" placeholder="Ingrese su contraseña" class="w-90 p-3 border-1 rounded-lg text-gray-500">
+        <input type="password" placeholder="Ingrese su contraseña" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
     </div>
-    <button class="flex items-start justify-center font-bold w-80 h-auto p-3 rounded-lg bg-green-400 m-4">Crear Cuenta</button>
+    <button class="flex items-start justify-center font-bold w-80 h-auto p-3 rounded-lg bg-green-400 m-4 slide-in-down-2">Crear Cuenta</button>
 </div>
