Se implementó el header en el dashboard (solo funcional en móviles) y detalles extra en el restore-passw

--- a/Finnancer/src/styles.css
+++ b/Finnancer/src/styles.css
@@ -11,6 +11,5 @@ html, body {
 
 body {
   display: flex;
-  justify-content: center; /* centra horizontalmente */
-  align-items: center;     /* CAMBIAR, ES SOLO PRUEBA*/
+  justify-content: center;
 }
