--- a/Finnancer/src/app/dashboard/dashboard.html
+++ b/Finnancer/src/app/dashboard/dashboard.html
@@ -1,1 +1,3 @@
-<p class="text-white">dashboard works!</p>
+<div class="flex flex-col p-0 items-start w-full">
+    <app-header-dashboard></app-header-dashboard>
+</div>
