--- a/Finnancer/src/app/restore-passw/restore-passw.html
+++ b/Finnancer/src/app/restore-passw/restore-passw.html
@@ -1,6 +1,11 @@
 <div class="flex flex-col w-screen h-screen bg-black gap-3 justify-end">
     <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
-        <button class="border-1 border-gray-100 rounded-full w-10 h-auto p-2"><i class='bx  bx-arrow-left-stroke' ></i></button>
+        <button
+            (click)="goBackAuth()"
+            class="border-1 border-gray-100 rounded-full w-10 h-auto p-2"
+        >
+            <i class='bx  bx-arrow-left-stroke' ></i>
+        </button>
         <div class="flex flex-col gap-2 p-2">
             <h2 class="text-white text-3xl font-medium">Restablecer Contraseña</h2>
             <p class="text-gray-400">Si no recuerdas tu contraseña, restablécela ahora.</p>
