Mejoras del Header del Dashboard en móviles

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,3 +1,4 @@
 <div class="flex flex-col p-0 items-start w-full">
+    <!-- Header del dashboad -->
     <app-header-dashboard></app-header-dashboard>
 </div>
