Mejoras de la UX en los componentes de autenticación

--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center gap-5 w-full h-auto slide-in-down">
+<div class="flex flex-col items-center justify-center gap-5 w-full h-full slide-in-down">
     <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
         <label for="">Nombre Completo</label>
         <input 
