--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -1,16 +1,16 @@
-<div class="flex flex-col w-screen h-screen">
-    <div class="h-auto flex gap-5 flex-col justify-end p-4">
+<div class="flex flex-col w-screen h-full">
+    <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
         <button
             class="border-1 border-gray-100 rounded-full w-10 h-auto p-2"
         >
             <i class='bx  bx-arrow-left-stroke' ></i>
         </button>
-        <div class="flex-col py-2">
+        <div class="flex flex-col py-2">
             <h2 class="text-white font-medium text-3xl">Bienvenido a Finnacner</h2>
             <p class="text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
         </div>
     </div>
-    <div class="h-full flex flex-col p-5 gap-4 rounded-t-4xl w-full bg-white">
+    <div class="h-2/3 flex flex-col p-5 gap-4 rounded-t-4xl w-full bg-white">
         <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-4 w-full text-gray-400">
             <button
                 [class.btn-clicked]="buttonSelected === 'login'"
