--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -15,7 +15,7 @@
         >
     </div>
     <div class="flex items-center justify-between w-full slide-in-down-2">
-        <div class="flex gap-2 justify-start">
+        <div class="flex gap-2 justify-start items-center">
             <input type="checkbox">
             <p>Recordarme</p>
         </div>
