--- a/src/app/restore-passw/restore-passw.html
+++ b/src/app/restore-passw/restore-passw.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-screen h-screen bg-black gap-3 justify-end">
+<div class="flex flex-col w-screen h-full bg-black justify-end">
     <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
         <button
             (click)="goBackAuth()"
@@ -6,13 +6,13 @@
         >
             <i class='bx  bx-arrow-left-stroke' ></i>
         </button>
-        <div class="flex flex-col gap-2 p-2">
+        <div class="flex flex-col py-2">
             <h2 class="text-white text-3xl font-medium">Restablecer Contraseña</h2>
             <p class="text-gray-400">Si no recuerdas tu contraseña, restablécela ahora.</p>
         </div>
     </div>
 
-    <div class="h-2/3 flex flex-col items-center justify-center p-6 gap-5 rounded-t-4xl w-full h-3/4 bg-white slide-in-down">
+    <div class="h-2/3 flex flex-col items-center justify-start p-6 gap-5 rounded-t-4xl w-full h-3/4 bg-white slide-in-down">
         <div class="flex flex-col w-full items-start gap-1 mt-2">
             <label for="">Correo Electrónico</label>
             <input type="text" placeholder="Ingerese su correo" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
