--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,4 +1,42 @@
-<div class="flex flex-col p-0 items-start w-full">
+<div class="flex flex-col items-center w-full">
     <!-- Header del dashboad -->
     <app-header-dashboard></app-header-dashboard>
+    <!-- Buscador y botones de notificaciones y usuario -->
+    <div class="flex flex-row justify-between w-full p-4 gap-2">
+        <div class="relative flex flex-row">
+            <input
+                type="text"
+                placeholder="Buscar"
+                class="border-1 border-white rounded-full text-gray-300 p-3 pl-12 w-full"
+            >
+            <button
+                class="absolute top-2 left-2 flex items-center justify-center bg-white p-2 w-8 h-8 rounded-full"
+            >
+                <i class='bx  bx-search'  ></i>
+            </button>
+        </div>
+        <div class="flex flex-row gap-2">
+            <button
+                class="flex items-center justify-center bg-white rounded-full p-2 w-12 h-12"
+            >
+                <i class='bx  bx-bell text-xl'  ></i> 
+            </button>
+            <button
+                class="flex items-center justify-center bg-green-400 rounded-full p-2 w-12 h-12"
+            >
+                <i class='bx  bxs-user text-xl'  ></i>
+            </button>
+        </div>
+    </div>
+    <!-- Encabezado del Dashboard -->
+    <div class="flex flex-row items-center justify-between text-white w-full p-4">
+        <h2 class="text-3xl w-1/2">Análisis de Gastos</h2>
+        <div class="1/2 flex flex-col">
+            <h2 class="font-thin text-xl">Tu Presupuesto</h2>
+            <div class="flex flex-row gap-2 items-center">
+                <p class="text-3xl font-medium">{{presupuesto}}</p>
+                <p class="text-xs bg-gray-800 p-1 rounded-full">MXN</p>
+            </div>
+        </div>
+    </div>
 </div>
