Avance de la interfaz del dashboard (solo en móviles)

--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -10,7 +10,7 @@
             <p class="text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
         </div>
     </div>
-    <div class="h-2/3 flex flex-col p-5 gap-4 rounded-t-4xl w-full bg-white">
+    <div class="h-full flex flex-col p-5 gap-4 rounded-t-4xl w-full bg-white">
         <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-4 w-full text-gray-400">
             <button
                 [class.btn-clicked]="buttonSelected === 'login'"
