--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center p-1 gap-5 w-full h-auto slide-in-down">
+<div class="flex flex-col items-center justify-center p-1 gap-5 lg:gap-2 w-full h-auto slide-in-down">
     <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
         <label for="">Correo Electrónico</label>
         <input
