--- a/src/app/restore-passw/restore-passw.html
+++ b/src/app/restore-passw/restore-passw.html
@@ -1,10 +1,10 @@
-<div class="flex flex-col w-screen h-full bg-black justify-end">
+<div class="flex flex-col w-screen h-full bg-black justify-end md:items-center">
     <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
         <button
             (click)="goBackAuth()"
-            class="border-1 border-gray-100 rounded-full w-10 h-auto p-2"
+            class="flex items-center justify-center border-1 border-gray-100 rounded-full w-10 h-auto p-2 text-white"
         >
-            <i class='bx  bx-arrow-left-stroke' ></i>
+            <i class='bx  bx-chevron-left text-2xl'  ></i> 
         </button>
         <div class="flex flex-col py-2">
             <h2 class="text-white text-3xl font-medium">Restablecer Contraseña</h2>
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="h-2/3 flex flex-col items-center justify-start p-6 gap-5 rounded-t-4xl w-full h-3/4 bg-white slide-in-down">
+    <div class="h-2/3 md:h-130 flex flex-col items-center justify-start p-6 gap-5 rounded-t-4xl md:rounded-4xl w-full md:w-100 bg-white slide-in-down">
         <div class="flex flex-col w-full items-start gap-1 mt-2">
             <label for="">Correo Electrónico</label>
             <input type="text" placeholder="Ingerese su correo" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
