--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -12,9 +12,9 @@
             (click)="toggle()"
             class="w-auto h-auto flex flex-col gap-1"
         >
-            <span class="h-1 w-5 rounded-full bg-green-400"></span>
-            <span class="h-1 w-5 rounded-full bg-green-400"></span>
-            <span class="h-1 w-5 rounded-full bg-green-400"></span>
+            <span class="h-1 w-5 rounded-full bg-green-primary"></span>
+            <span class="h-1 w-5 rounded-full bg-green-primary"></span>
+            <span class="h-1 w-5 rounded-full bg-green-primary"></span>
         </div>
     </header>
     <!-- Navbar que se muestra si el signal "isShow es true, y se oculta si es false" -->
