--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col items-center w-full">
     <!-- Header del dashboad -->
     <app-header-dashboard></app-header-dashboard>
+    
     <!-- Buscador y botones de notificaciones y usuario -->
     <div class="flex flex-row justify-between w-full p-4 gap-2">
         <div class="relative flex flex-row">
@@ -28,6 +29,7 @@
             </button>
         </div>
     </div>
+
     <!-- Encabezado del Dashboard -->
     <div class="flex flex-row items-center justify-between text-white w-full p-4">
         <h2 class="text-3xl w-1/2">Análisis de Gastos</h2>
@@ -100,16 +102,16 @@
 
     <!-- Grafica de barras gastos a lo largo del tiempo -->
     <div class="w-full px-4 flex flex-col h-auto mt-4">
-        <div class="bg-green-secundary w-full p-4 flex flex-col rounded-3xl gap-1 overflow-x-auto">
+        <div class="bg-green-secundary w-full h-65 p-4 flex flex-col rounded-3xl gap-4 overflow-x-auto">
             <div class="flex w-full justify-between items-center">
-                <h2>Gastos al largo del tiempo</h2>
+                <h2 class="font-medium text-xl">Gastos al largo del tiempo</h2>
                 <div class="flex items-center justify-center gap-2">
                     <p>{{gastosTotales}}</p>
                     <p class="bg-categories text-xs p-1 rounded-full text-white">MXN</p>
                 </div>
             </div>
             @if (isBrowser) {
-                <div class="w-full flex items-center">
+                <div class="w-full h-auto flex items-center">
                     <canvas
                         baseChart
                         [data]="barChartData"
@@ -120,6 +122,39 @@
                     </canvas>
                 </div>
             }
+        </div>
+    </div>
+
+    <!-- Lista de las últimas transacciones -->
+    <div class="w-full px-4 flex flex-col mt-4 h-auto">
+        <div class="bg-categories w-full h-65 p-4 flex flex-col rounded-3xl text-white gap-4">
+            <h2 class="font-medium text-xl">Últimas Transacciones</h2>
+            <div class="overflow-y-auto w-auto">
+                <table class="w-full">
+                    <tbody class="flex flex-col gap-4">
+                        @for (transaccion of ultimasTransacciones; track transaccion.id) {
+                            <tr class="flex justify-between p-2">
+                                <td>{{transaccion.icono}}</td>
+                                <td class="font-thin">{{transaccion.nombre}}</td>
+                                <td class="font-thin">{{transaccion.monto}}</td>
+                            </tr>
+                        }
+                        @empty {
+                            <p>No hay transacciones recientes</p>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <!-- Gráfico que visualiza los mayores gastos del mes -->
+    <div class="w-full px-4 flex flex-col my-4 h-auto">
+        <div class="bg-categories w-full h-65 p-4 flex flex-col rounded-3xl text-white gap-4">
+            <h2 class="font-medium text-xl">Mayores Gastos</h2>
+            <div class="overflow-auto w-full h-full">
+                <!-- Próximamente -->
+            </div>
         </div>
     </div>
 </div>
