--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -1,7 +1,7 @@
 <div class="w-screen">
     <!-- Header que aparece en pantallas de escritorio -->
     <header class="desktop-menu">
-        <button>Mi Cuenta</button>
+        <button (click)="goToAccount()">Mi Cuenta</button>
         <button>Transacciones</button>
         <button>Categorías</button>
         <button>Balance</button>
@@ -25,7 +25,10 @@
             class="menu p-4 absolute top-14 right-0 z-40 w-full flex-col items-center"
         >
             <ul class="text-white flex flex-col gap-2 items-end w-full">
-                <li class="flex items-center justify-center gap-2">
+                <li
+                    class="flex items-center justify-center gap-2"
+                    routerLink="/account"
+                >
                     Mi cuenta
                     <i class='bx  bx-user text-xl'  ></i>
                 </li>
