--- a/src/app/account/info-account/info-account.html
+++ b/src/app/account/info-account/info-account.html
@@ -66,6 +66,6 @@
                 [ngModel]="egresosMaximos()"
             >
         </div>
-        <button class="animate-bounce-scale bg-green-primary p-4 rounded-2xl font-bold">Guardar Cambios</button>
+        <button class="btnSaveData bg-green-primary p-4 rounded-2xl font-bold">Guardar Cambios</button>
     </div>
 </div>
