--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -1,16 +1,29 @@
-<div class="flex flex-col w-screen h-full md:items-center">
-    <div class="h-1/3 flex gap-5 flex-col justify-end p-4">
-        <button
-            class="flex items-center justify-center border-1 border-gray-100 rounded-full w-10 h-auto p-2 text-white"
+<div class="flex flex-col md:flex-row w-screen h-full md:items-center md:justify-center">
+    <!-- Encabezado del componente auth solo en moviles -->
+    <div class="h-1/3 relative overflow-hidden flex gap-5 flex-col justify-end p-4 md:hidden">
+        <!-- Imagen de fondo -->
+        <img
+            src="/chess-imagen.jpg"
+            class="w-full h-full object-cover object-top absolute top-0 left-0 z-10"
         >
-            <i class='bx  bx-chevron-left text-2xl'  ></i> 
+        <!-- Capa negra encima de la imagen -->
+        <div class="absolute inset-0 bg-black/95 z-10"></div>
+
+        <!-- Botón -->
+        <button
+            class="flex items-center justify-center border border-gray-100 rounded-full w-10 h-auto p-2 text-white z-10"
+        >
+            <i class='bx bx-chevron-left text-2xl'></i> 
         </button>
-        <div class="flex flex-col py-2">
-            <h2 class="text-white font-medium text-3xl">Bienvenido a Finnacner</h2>
-            <p class="text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
+
+        <!-- Texto -->
+        <div class="flex flex-col py-2 z-10">
+            <h2 class="text-white font-medium text-3xl">Bienvenido a Finnancer</h2>
+            <p class="text-gray-300">¿Listo para controlar las finanzas de tu negocio?</p>
         </div>
     </div>
-    <div class="h-full md:h-130 flex flex-col p-5 gap-4 rounded-t-4xl md:rounded-4xl w-full md:w-100 bg-white">
+
+    <div class="h-full md:h-150 flex flex-col p-5 md:p-8 gap-4 md:gap-8 rounded-t-4xl md:rounded-l-2xl md:rounded-none w-full md:w-120 bg-white">
         <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-4 w-full text-gray-400">
             <button
                 [class.btn-clicked]="buttonSelected === 'login'"
@@ -32,5 +45,19 @@
         } @else if (buttonSelected === 'register'){
             <app-register></app-register>
         }
+    </div>
+
+    <!-- Encabezado que solo aparece en pantallas grandes -->
+    <div class="hidden w-140 h-150 md:flex relative overflow-hidden rounded-r-2xl p-10 items-center">
+        <img
+            src="/vista-superior-del-espacio-de-trabajo-con-cuaderno-y-bloc-de-notas.jpg"
+            class="w-full h-full object-cover object-right absolute top-0 left-0"
+        >
+        <div class="absolute inset-0 bg-black/40"></div> <!-- Overlay oscuro en la imagen -->
+        <div class="w-130 h-60 flex flex-col justify-center items-start text-white p-10 gap-2
+                    bg-black/30 backdrop-blur-md rounded-xl">
+            <h2 class="text-3xl font-bold">Bienvenido a Finnancer</h2>
+            <p class="mt-2 text-xl text-gray-400">¿Listo para controlar las finanzas de tu negocio?</p>
+        </div>
     </div>
 </div>
