--- a/src/app/auth-page/auth-page.css
+++ b/src/app/auth-page/auth-page.css
@@ -2,4 +2,23 @@
     background-color: white;
     border-radius: 30px;
     color: #292929;
+    animation: bounce-fade 0.5s ease-in-out;
+}
+
+@keyframes bounce-fade {
+  0% {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  40% {
+    transform: scale(1.02);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(0.99);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
