--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -23,8 +23,20 @@
         </div>
     </div>
 
-    <div class="h-full md:h-150 flex flex-col p-5 md:p-8 gap-4 md:gap-8 rounded-t-4xl md:rounded-l-2xl md:rounded-none w-full md:w-120 bg-white">
-        <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-4 w-full text-gray-400">
+    <div class="h-full md:h-150 flex flex-col p-5 md:p-6 gap-4 md:gap-6 rounded-t-4xl md:rounded-l-2xl md:rounded-none w-full md:w-120 bg-white">
+        <div class="hidden md:flex flex-row justify-between items-center">
+            <!-- Botón -->
+            <button
+                class="flex items-center justify-center border border-black rounded-full w-10 h-auto p-2 z-10"
+            >
+                <i class='bx bx-chevron-left text-2xl'></i> 
+            </button>
+
+            <h2 class="text-2xl font-bold flex">
+                Finn<p class="text-green-400">ancer</p>
+            </h2>
+        </div>
+        <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-2 w-full text-gray-400">
             <button
                 [class.btn-clicked]="buttonSelected === 'login'"
                 (click)="changeModal('login')"
