--- a/src/app/auth-page/register/register.css
+++ b/src/app/auth-page/register/register.css
@@ -1,3 +1,11 @@
+.card {
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
 @keyframes slideInDown {
     from {
         transform: translateY(-5%);
@@ -15,5 +23,5 @@
 }
 
 .slide-in-down-2 {
-    animation: slideInDown 1s ease-out forwards;
+    animation: slideInDown 1s ease-out;
 }
