--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -7,10 +7,14 @@
         <button>Balance</button>
     </header>
     <!-- Header que aparece en móviles -->
-    <header class="mobile-header relative z-50 flex flex-row items-center w-full h-auto p-5 z-20">
+    <header class="mobile-header flex flex-row relative w-full items-center justify-between p-5 z-50">
+        <div class="flex flex-row text-2xl font-bold text-white">
+            <h2>Finn</h2>
+            <p class="text-[#46E24D]">ancer</p>
+        </div>
         <div
             (click)="toggle()"
-            class="w-auto h-auto flex flex-col gap-1"
+            class="h-auto flex flex-col gap-1"
         >
             <span class="h-1 w-5 rounded-full bg-green-primary"></span>
             <span class="h-1 w-5 rounded-full bg-green-primary"></span>
