--- a/src/app/header-dashboard/header-dashboard.css
+++ b/src/app/header-dashboard/header-dashboard.css
@@ -6,14 +6,19 @@
 
 .menu {
   background: #292929;
+  transition: transform 0.3s ease;
+}
+
+.menu:hover {
+  transform: translateY(-5px);
 }
 
 .bg-green-primary {
-    background-color: #46E24D;
+  background-color: #46E24D;
 }
 
 .bg-green-secundary {
-    background-color: #00C40A;
+  background-color: #00C40A;
 }
 
 @media (max-width: 768px) {
