--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -1,10 +1,11 @@
-<div class="w-screen">
+<div class="w-screen lg:w-full">
     <!-- Header que aparece en pantallas de escritorio -->
-    <header class="desktop-menu">
-        <button (click)="goToAccount()">Mi Cuenta</button>
-        <button>Transacciones</button>
-        <button>Categorías</button>
-        <button>Balance</button>
+    <header class="desktop-menu flex flex-row gap-2 p-4">
+        <button class="bg-green-primary rounded-full p-3">Logo</button>
+        <button (click)="goToAccount()" class="menu rounded-full p-4 text-white font-thin">Mi Cuenta</button>
+        <button class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
+        <button class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
+        <button class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
     </header>
     <!-- Header que aparece en móviles -->
     <header class="mobile-header flex flex-row relative w-full items-center justify-between p-5 z-50">
