Correciones en el diseño responsivo del dashboard

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="w-full flex flex-col lg:flex-row lg:justify-between">
+    <div class="w-full flex flex-col md:flex-row lg:justify-between">
         <!-- Encabezado del Dashboard -->
         <div class="slide-in-down flex flex-row items-center justify-between lg:justify-start text-white w-full p-4">
             <h2 class="text-3xl lg:text-5xl w-1/2">Análisis de Gastos</h2>
