--- a/src/app/dashboard/categorias-dashboard/categorias-dashboard.html
+++ b/src/app/dashboard/categorias-dashboard/categorias-dashboard.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full lg:p-0 flex flex-col justify-between overflow-y-auto">
+<div class="w-full h-full lg:p-0 flex flex-col gap-3 lg:gap-0 lg:justify-between overflow-y-auto">
     @for (categoria of categorias; track categoria.id) {
         <div class="slide-in-down card bg-categories flex flex-row rounded-3xl p-7 w-full text-white gap-4 justify-between items-center">
             <p class="w-22 h-19 flex items-center justify-center font-bold p-4 rounded-full border-5 border-[#46E24D]">{{categoria.icono}}</p>
