--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,15 @@ body {
 }
 
 .bg-categories {
-    background-color: #292929;
+    background: linear-gradient(to right, #292929, #111111);
+}
+
+.bg-gradient-gray {
+    background: linear-gradient(to top, #292929, #111111);
+}
+
+.bg-gray-details {
+    background-color: #3B3B3B;
 }
 
 .bg-green-primary {
