Ajustes en los estilos globales de la app

--- a/src/app/account/profiles-account/profiles-account.html
+++ b/src/app/account/profiles-account/profiles-account.html
@@ -1,4 +1,4 @@
-<div class="bg-categories w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
+<div class="bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
     <div class="w-full flex justify-between items-center text-white">
         <h2 class="text-2xl">Gestión de Perfiles</h2>
         <button
