--- a/src/app/dashboard/bar-chart/bar-chart.html
+++ b/src/app/dashboard/bar-chart/bar-chart.html
@@ -4,7 +4,7 @@
             <h2 class="font-medium text-xl lg:text-2xl">Gastos al largo del tiempo</h2>
             <div class="flex items-center justify-center gap-2 overflow-x-auto">
                 <p class="lg:text-4xl">${{gastosTotales}}</p>
-                <p class="bg-categories text-xs p-1 rounded-full text-white">MXN</p>
+                <p class="bg-[#292929] text-xs p-1 lg:px-2 rounded-full text-white">MXN</p>
             </div>
         </div>
         @if (isBrowser) {
