--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -41,7 +41,7 @@
                 <h2 class="font-thin text-xl lg:text-3xl">Tu Presupuesto</h2>
                 <div class="flex flex-row gap-2 items-center">
                     <p class="text-3xl lg:text-5xl font-medium">{{presupuesto}}</p>
-                    <p class="bg-categories text-xs p-1 rounded-full">MXN</p>
+                    <p class="bg-categories text-xs p-1 lg:px-2 rounded-full">MXN</p>
                 </div>
             </div>
         </div>
