--- a/src/app/dashboard/last-transactions/last-transactions.html
+++ b/src/app/dashboard/last-transactions/last-transactions.html
@@ -1,6 +1,6 @@
 <!-- Lista de las últimas transacciones -->
 <div class="w-full flex flex-col h-full">
-    <div class="bg-gradient-gray card w-full h-65 lg:h-full p-4 flex flex-col rounded-3xl text-white gap-4">
+    <div class="bg-gradient-gray-v card w-full h-65 lg:h-full p-4 flex flex-col rounded-3xl text-white gap-4">
         <h2 class="font-medium text-xl">Últimas Transacciones</h2>
         <div class="overflow-y-auto w-auto">
             <table class="w-full">
