--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -11,7 +11,7 @@
     <!-- Información de la cuenta -->
     <div class="flex flex-col items-start justify-center gap-2">
         <h2 class="text-white font-bold ml-2">Mi Cuenta</h2>
-        <div class="bg-categories w-full h-auto p-5 lg:p-8 flex flex-row items-center justify-between rounded-2xl">
+        <div class="bg-gradient-gray-h w-full h-auto p-5 lg:p-8 flex flex-row items-center justify-between rounded-2xl">
             <div class="flex flex-row items-center gap-4">
                 <div class="flex items-center justify-center w-15 md:w-18 lg:w-24 h-15 md:h-18 lg:h-24 lg:ml-5 p-2 rounded-full bg-green-primary">
                     <i class='bx  bxs-user text-2xl lg:text-4xl'  ></i>
@@ -27,7 +27,7 @@
 
     <div class="flex flex-col md:flex-row w-full gap-4">
         <div class="w-full lg:w-100 h-full gap-2">
-            <div class="bg-categories w-full h-full flex flex-row items-start justify-start rounded-2xl">
+            <div class="bg-gradient-gray-h w-full h-full flex flex-row items-start justify-start rounded-2xl">
                 <div class="w-full flex flex-col items-start justify-start gap-2 text-white p-2 lg:p-4">
                     <button
                         [class.animate-bounce-scale]="buttonSelected() === 1"
