--- a/src/app/dashboard/most-spendings/most-spendings.html
+++ b/src/app/dashboard/most-spendings/most-spendings.html
@@ -1,5 +1,5 @@
 <div class="w-full flex flex-col lg:h-full">
-    <div class="bg-categories card w-full h-6 lg:h-full p-4 flex flex-col rounded-3xl text-white gap-4">
+    <div class="bg-gradient-gray-h card w-full h-6 lg:h-full p-4 flex flex-col rounded-3xl text-white gap-4">
         <h2 class="font-medium text-xl">Mayores Gastos</h2>
         <div class="overflow-auto w-full h-full">
             <!-- Próximamente -->
