--- a/src/app/account/profiles-account/profiles-account.html
+++ b/src/app/account/profiles-account/profiles-account.html
@@ -2,7 +2,7 @@
     <div class="w-full flex justify-between items-center text-white">
         <h2 class="text-2xl">Gestión de Perfiles</h2>
         <button
-            class="bg-green-primary px-4 py-2 rounded-xl text-black flex items-center gap-1"
+            class="card bg-green-primary px-4 py-2 rounded-xl text-black flex items-center gap-1"
         >
             <i class='bx  bx-plus text-xl'  ></i> 
             Nuevo Perfil
