--- a/src/app/account/account.css
+++ b/src/app/account/account.css
@@ -7,29 +7,35 @@
 }
 
 .bg-gray {
-    background-color: #292929;
+  background-color: #292929;
 }
 
-@keyframes bounce-fade {
-  0% {
-    transform: scale(0.95);
-    opacity: 0;
-  }
-  40% {
-    transform: scale(1.02);
-    opacity: 1;
-  }
-  60% {
-    transform: scale(0.99);
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
+.btn-selected {
+  position: relative;
+  background: none;
+  cursor: pointer;
+  color: #46E24D;
 }
 
-.animate-bounce-scale {
-    background-color: #46E24D;
-    color: #292929;
-    animation: bounce-fade 0.5s ease-in-out;
+/* Contenedor principal de la linea */
+.is-selected {
+  width: 100%;
+  height: 1px;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Estilos de la línea cuando el botón no está seleccionado */
+.line {
+  display: block;
+  border-radius: 10px;
+  height: 100%;
+  background-color: #46E24D;
+  width: 0%; 
+  transition: width 0.3s ease-in-out;
+}
+
+/* Estilos de la línea cuando el botón está seleccionado */
+.line-selected {
+  width: 100%;
 }
