--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -9,7 +9,7 @@
     </div>
 
     <!-- Información de la cuenta -->
-    <div class="flex flex-col items-start justify-center gap-2">
+    <div class="slide-in-down flex flex-col items-start justify-center gap-2">
         <h2 class="text-white font-bold ml-2">Mi Cuenta</h2>
         <div class="bg-gradient-gray-h w-full h-auto p-5 lg:p-8 flex flex-row items-center justify-between rounded-2xl">
             <div class="flex flex-row items-center gap-4">
@@ -27,40 +27,82 @@
 
     <div class="flex flex-col md:flex-row w-full gap-4">
         <div class="w-full lg:w-100 h-full gap-2">
-            <div class="bg-gradient-gray-h w-full h-full flex flex-row items-start justify-start rounded-2xl">
-                <div class="w-full flex flex-col items-start justify-start gap-2 text-white p-2 lg:p-4">
-                    <button
-                        [class.animate-bounce-scale]="buttonSelected() === 1"
-                        (click)="buttonSelect(1)"
-                        class="p-3 rounded-2xl font-thin flex items-center justify-center gap-2 lg:gap-4"
-                    >
-                        <i class='bx  bx-user text-xl'  ></i> 
-                        Mi cuenta
-                    </button>
-                    <button
-                        [class.animate-bounce-scale]="buttonSelected() === 2"
-                        (click)="buttonSelect(2)"
-                        class="p-3 rounded-2xl font-thin flex items-center justify-center gap-2 lg:gap-4"
-                    >
-                        <i class='bx  bx-group text-xl'  ></i> 
-                        Perfiles
-                    </button>
-                    <button
-                        [class.animate-bounce-scale]="buttonSelected() === 3"
-                        (click)="buttonSelect(3)"
-                        class="p-3 rounded-2xl font-thin flex items-center justify-center gap-2 lg:gap-4"
-                    >
-                        <i class='bx  bx-dollar text-xl'  ></i> 
-                        Finanzas
-                    </button>
-                    <button
-                        [class.animate-bounce-scale]="buttonSelected() === 4"
-                        (click)="buttonSelect(4)"
-                        class="p-3 rounded-2xl font-thin flex items-center justify-center gap-2 lg:gap-4"
-                    >
-                        <i class='bx  bx-lock text-xl'  ></i> 
-                        Seguridad
-                    </button>
+            <div class="bg-gradient-gray-h slide-to-right w-full h-full flex flex-row items-start justify-start rounded-2xl">
+                <div class="w-full flex flex-col items-start justify-start gap-2 text-white p-4">
+                    <!-- Botón para mostrar la info de la cuenta -->
+                    <div class="w-full flex flex-col items-center justify-start">
+                        <button
+                            [class.btn-selected]="buttonSelected() === 1"
+                            (click)="buttonSelect(1)"
+                            class="p-3 w-full font-thin flex items-center justify-start gap-2 lg:gap-4"
+                        >
+                            <i class='bx  bx-user text-xl'  ></i> 
+                            Mi cuenta
+                        </button>
+                        <!-- Linea que se activa cuando el botón fue seleccionado -->
+                        <div class="is-selected">
+                            <span
+                                class="line"
+                                [class.line-selected]="buttonSelected() === 1"
+                            >
+                            </span>
+                        </div>
+                    </div>
+                    <!-- Botón para mostrar los perfiles del usuario -->
+                    <div class="w-full flex flex-col items-center justify-start">
+                        <button
+                            [class.btn-selected]="buttonSelected() === 2"
+                            (click)="buttonSelect(2)"
+                            class="p-3 w-full font-thin flex items-center justify-start gap-2 lg:gap-4"
+                        >
+                            <i class='bx  bx-group text-xl'  ></i> 
+                            Perfiles
+                        </button>
+                        <!-- Linea que se activa cuando el botón fue seleccionado -->
+                        <div class="is-selected">
+                            <span
+                                class="line"
+                                [class.line-selected]="buttonSelected() === 2"
+                            >
+                            </span>
+                        </div>
+                    </div>
+                    <div class="w-full flex flex-col items-center justify-start">
+                        <button
+                            [class.btn-selected]="buttonSelected() === 3"
+                            (click)="buttonSelect(3)"
+                            class="p-3 w-full font-thin flex items-center justify-start gap-2 lg:gap-4"
+                        >
+                            <i class='bx  bx-dollar text-xl'  ></i> 
+                            Finanzas
+                        </button>
+                        <!-- Linea que se activa cuando el botón fue seleccionado -->
+                        <div class="is-selected">
+                            <span
+                                class="line"
+                                [class.line-selected]="buttonSelected() === 3"
+                            >
+                            </span>
+                        </div>
+                    </div>
+                    <div class="w-full flex flex-col items-center justify-start">
+                        <button
+                            [class.btn-selected]="buttonSelected() === 4"
+                            (click)="buttonSelect(4)"
+                            class="p-3 w-full font-thin flex items-center justify-start gap-2 lg:gap-4"
+                        >
+                            <i class='bx  bx-lock text-xl'  ></i> 
+                            Seguridad
+                        </button>
+                        <!-- Linea que se activa cuando el botón fue seleccionado -->
+                        <div class="is-selected">
+                            <span
+                                class="line"
+                                [class.line-selected]="buttonSelected() === 4"
+                            >
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,6 +119,12 @@
             @else if (buttonSelected() === 2) {
                 <app-profiles-account></app-profiles-account>
                 <app-history-transactions></app-history-transactions>
+            }
+            @else if (buttonSelected() === 3) {
+                <app-finance-account></app-finance-account>
+            }
+            @else if (buttonSelected() === 4) {
+                <app-security-account></app-security-account>
             }
             </div>
     </div>
