--- a/src/app/account/history-transactions/history-transactions.html
+++ b/src/app/account/history-transactions/history-transactions.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
+<div class="slide-in-up bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
     <div class="w-full flex items-center text-white">
         <h2 class="text-2xl">Historial de transacciones</h2>
     </div>
