--- a/src/app/account/info-account/info-account.html
+++ b/src/app/account/info-account/info-account.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
+<div class="bg-gradient-gray-h slide-to-left w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
     <!-- Encabezado de la información de la cuenta del usuario -->
     <div class="flex flex-row justify-between w-full items-center py-1">
         <h2 class="text-2xl text-white">Información</h2>
