--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -4,7 +4,7 @@
         <button class="bg-green-primary rounded-full p-3">Logo</button>
         <button (click)="goToAccount()" class="menu rounded-full p-4 text-white font-thin">Mi Cuenta</button>
         <button class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
-        <button class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
+        <button (click)="goToCategories()" class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
         <button class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
     </header>
     <!-- Header que aparece en móviles -->
