Cambios generales en toda la app, detalles de la UI.

--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -36,7 +36,7 @@
                 Finn<p class="text-green-400">ancer</p>
             </h2>
         </div>
-        <div class="flex justify-between w-3/4 rounded-full p-1 bg-gray-200 p-auto gap-2 w-full text-gray-400">
+        <div class="flex justify-between rounded-full p-1 bg-gray-200 p-auto gap-2 w-full text-gray-400">
             <button
                 [class.btn-clicked]="buttonSelected === 'login'"
                 (click)="changeModal('login')"
