--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center w-full">
+<main class="flex flex-col items-center w-full">
     <div class="w-full lg:w-screen flex flex-col lg:flex-row lg:justify-between">
         <!-- Header del dashboad -->
         <app-header-dashboard></app-header-dashboard>
@@ -103,4 +103,4 @@
             <app-most-spendings></app-most-spendings>
         </div>
     </div>
-</div>
+</main>
